# sdk-core-rust

./: .gitignore  Cargo.toml  bla.txt  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  rules.json
src/: eventos.rs  lib.rs
src/entities/: mod.rs
src/entities/device/: model.rs
src/entities/events/: model.rs
src/framekit/: event.rs  eventos.rs  geo.rs  mod.rs  network.rs  score.rs
src/framekit/fingerprint/: mod.rs
src/structs/: eventos.rs  mod.rs
