[package]
name = "shaayud_core"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
] }

chrono = "0.4"
neo4rs = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
